# Tinman

./: Cargo.toml  README.md  system_tester.py
datasets/: data_shuffle.py  data_splitter.py  normalized_iris.json  normalizer.py  setosa_versicolor_iris.json
settings/: default2_with_weights_config.json  default_config.json  default_with_weights_config.json  iris_vers_set_2_10_2_layer_config.json  iris_vers_set_2_2_2_2_layer_config.json  iris_vers_set_2_2_2_arctan_layer_config.json  iris_vers_set_2_2_2_layer_config.json  iris_vers_set_2_2_2_lrelu_layer_config.json  iris_vers_set_2_2_2_sqnl_layer_config.json  iris_vers_set_2_2_2_tanh_layer_config.json  iris_vers_set_2_2_lrelu_layer_config.json  iris_vers_set_2_3_2_layer_config.json  iris_vers_set_2_5_5_2_layer_config.json  iris_vers_set_config.json  mnist_config.json
src/: lib.rs  main.rs  prelude.rs
src/ClassifierParts/: breeder.rs  classifier.rs  index_manager.rs  mod.rs  nnet_trainer.rs
src/DataAndConfig/: dataset.rs  mod.rs  neural_net_config_parts.rs  test_config.rs
src/NeuralNetworkParts/: activator.rs  layer.rs  make_new_nodes.rs  mod.rs  neural_network.rs  nnet_errors.rs  node.rs
src/classifier_parts/: breeder.rs  classifier.rs  classifier_errors.rs  mod.rs  nnet_trainer.rs  optimize_nnet.rs
src/data_and_config/: mod.rs  neural_net_config_parts.rs  optimizer_parameters.rs
src/neural_network_parts/: activator.rs  layer.rs  make_new_nodes.rs  neural_network.rs  nnet_errors.rs  node.rs
testing_files/: breeder_test.json  classifier_tests.json  nnet_iris_tests.json  nnet_trainer_iris_test.json
