[package]
name = "Tinman"
version = "0.1.0"
authors = ["MarkT <Mark_1183@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
serde="1.0"
serde_json = "1.0"
serde_derive = "1.0"
rand = "0.3"
crossbeam = "0.3.2"
num_cpus = "1.13.0"